[gd_scene load_steps=20 format=2]

[ext_resource path="res://Sprites/Player/idle/Player-idle-labcoat2.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Player/idle/Player-idle-labcoat4.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Player/idle/Player-idle-labcoat1.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Player/idle/Player-idle-labcoat3.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Player/walk/Player-walk-labcoat2.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Player/walk/Player-walk-labcoat1.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Player/walk/Player-walk-labcoat3.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Player/walk/Player-walk-labcoat4.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Player/Player.gd" type="Script" id=9]
[ext_resource path="res://GUI/SinsUI.tscn" type="PackedScene" id=10]
[ext_resource path="res://GUI/HealthBar/PlayerBar.tscn" type="PackedScene" id=11]
[ext_resource path="res://Audio/105016__julien-matthey__jm-fx-fireball-01.wav" type="AudioStream" id=12]
[ext_resource path="res://Audio/TheLoomingBattle_0.wav" type="AudioStream" id=13]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 1 ), ExtResource( 4 ), ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "walk",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 11, 12 )

[sub_resource type="CircleShape2D" id=3]
radius = 27.0072

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0, 0.775194, 1 )
colors = PoolColorArray( 1, 0, 0, 1, 0.273438, 0.0448608, 0.0448608, 1, 0.85098, 0.803922, 0.803922, 0 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
flag_disable_z = true
spread = 78.49
gravity = Vector3( 0, 0, 0 )
initial_velocity = 104.65
initial_velocity_random = 0.23
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 2.0
color_ramp = SubResource( 5 )

[node name="Player" type="KinematicBody2D"]
z_index = 2
script = ExtResource( 9 )

[node name="shootPos" type="Position2D" parent="."]
position = Vector2( 22.1244, 0 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
rotation = -1.5708
frames = SubResource( 1 )
animation = "idle"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
smoothing_enabled = true
smoothing_speed = 10.0

[node name="gluttonyArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="gluttonyArea"]
shape = SubResource( 3 )

[node name="Particles2D" type="Particles2D" parent="gluttonyArea"]
emitting = false
amount = 100
lifetime = 0.5
process_material = SubResource( 6 )

[node name="gluttonyTimer" type="Timer" parent="gluttonyArea"]
wait_time = 3.0

[node name="GUI" type="CanvasLayer" parent="."]

[node name="SinsUI" parent="GUI" instance=ExtResource( 10 )]

[node name="PlayerBar" parent="GUI" instance=ExtResource( 11 )]

[node name="fireRate" type="Timer" parent="."]
wait_time = 0.1

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 12 )

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 13 )
autoplay = true

[connection signal="body_entered" from="gluttonyArea" to="." method="_on_gluttonyArea_body_entered"]
[connection signal="timeout" from="gluttonyArea/gluttonyTimer" to="." method="_on_gluttonyTimer_timeout"]
[connection signal="timeout" from="fireRate" to="." method="_on_fireRate_timeout"]
[connection signal="finished" from="AudioStreamPlayer2D" to="." method="_on_AudioStreamPlayer2D_finished"]
